Improved test stability + updated readme